# Curso-Programacion

00 - Introducción/: instrucciones
00 - Introducción/Proyecto/: CMakeLists.txt
15 - SDL/: CMakeLists.txt  main.cpp
15 - Videojuego/: main.cpp
